cambios en vistas

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 
 NotEmpty.user.name= El nombre del usuario es requerido
 NotEmpty.user.lastName= El apellido del usuario es requerido
-NotNull.user.creatAt= La fechca no debe ser nula
+NotNull.user.creatAt= La fecha no debe ser nula
+typeMismatch.user.creatAt= El formato de fecha es invalido debe ser dd-mm-yy
 
 
